# flow-ssn

./: .gitignore
gssn/: README.md  pyproject.toml
gssn/gssn/: factory.py  train.py  utils.py
gssn/gssn/data/: lidc.py
gssn/gssn/eval/: metrics.py
gssn/gssn/models/continuous/: model.py  solvers.py
gssn/gssn/models/gnn/: model.py
gssn/gssn/nn/: unet.py  utils.py
gssn/notebooks/: base_lidc.ipynb  gauss_lidc.ipynb
gssn/scripts/: README.md  run_continuous_lidc.sh  run_gauss_lidc.sh  slurm_continuous_lidc.sh  slurm_gauss_lidc.sh
notebooks/: continuous_lidc.ipynb
