[project]
name = "gssn"
version = "0.1.0"
description = "Flow-SSN reimplemented in JAX/Flax"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax[cpu]>=0.4.35",
    "flax>=0.10.0",
    "optax>=0.2.4",
    "h5py>=3.11.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.65.0",
    "wandb>=0.18.0",
    "ipykernel>=7.2.0",
    "scikit-learn>=1.8.0",
    "pydicom>=3.0.1",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]>=0.4.35"]
tpu = ["jax[tpu]>=0.4.35"]
dev = ["pytest>=8.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
